añadidos enlaces a la imagen y título de proyectos personales

--- a/index.html
+++ b/index.html
@@ -444,23 +444,49 @@
             </section>
         </div>
 
-        <!-- <section class="bg-white p-6 sm:p-8 rounded-xl shadow-2xl" id="proyecto">
+        <section class="bg-white p-6 sm:p-8 rounded-xl shadow-2xl" id="proyecto">
             <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6 border-b pb-3">
                 <i class="fas fa-laptop-code mr-3 text-accent"></i>Proyecto Destacado
             </h2>
 
-            <p class="text-xl sm:text-2xl font-bold text-gray-700">
-                Proyectos propios próximamente... 30/09/2025
-            </p>
-            <p class="text-sm text-gray-500 mt-2">
-                Próximamente en algo genial. ¡Vuelve pronto!
-            </p> -->
-            <!-- <div
-                class="flex flex-col items-center justify-center h-40 bg-gray-50 rounded-lg border-2 border-dashed border-gray-300 p-4">
+            <div class="bg-gray-50 p-6 rounded-lg border border-gray-200">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 items-center">
+                    <!-- Imagen del proyecto -->
+                    <div class="md:col-span-1">
+                        <a href="https://web-gala-imparables.pages.dev/" target="_blank" class="block group">
+                            <div
+                                class="bg-gradient-to-br from-accent to-purple-600 h-32 w-full rounded-lg flex items-center justify-center shadow-lg group-hover:shadow-xl transition-all duration-300 group-hover:scale-105">
+                                <i
+                                    class="fas fa-globe text-white text-4xl group-hover:text-5xl transition-all duration-300"></i>
+                            </div>
+                        </a>
+                    </div>
 
-
-            </div> 
-        </section>-->
+                    <!-- Contenido del proyecto -->
+                    <div class="md:col-span-2">
+                        <h3 class="text-xl font-semibold text-primary-dark mb-3">
+                            <a href="https://web-gala-imparables.pages.dev/" target="_blank"
+                                class="hover:text-accent transition duration-150">
+                                Gala imparables - Proyecto Web Personal en Desarrollo
+                            </a>
+                        </h3>
+                        <p class="text-gray-600 mb-4 leading-relaxed">
+                            Aplicación web moderna en desarrollo que combina diseño responsive con funcionalidades
+                            dinámicas.
+                            Construida con tecnologías actuales y enfocada en la experiencia de usuario.
+                        </p>
+                        <div class="flex flex-wrap gap-2">
+                            <span class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full">HTML5</span>
+                            <span class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full">CSS3</span>
+                            <span
+                                class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full">JavaScript</span>
+                            <span
+                                class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full">Responsive</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?"
             class="float-wa" target="_blank">
