--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="alternate" hreflang="es" href="../es/" />
     <link rel="alternate" hreflang="en" href="../en/" />
     <link rel="alternate" hreflang="x-default" href="../es/" />
-    <title>Web developer and marketing - Álvaro Pastor CV</title>
+    <title>Álvaro Pastor CV - Web developer and marketing - </title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -228,6 +228,56 @@
 
         <div class="space-y-10 mb-12">
 
+            <section class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border-l-4 border-accent" id="experiencia">
+                <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6">
+                    <i class="fas fa-briefcase mr-3 text-accent"></i>Experiencia Profesional
+                </h2>
+
+                <div class="space-y-6">
+                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
+                        <p class="text-xs text-gray-500 mb-1">Septiembre 2025 - Actualmente</p>
+                        <h4 class="text-lg font-semibold text-primary-dark">Especialista en Marketing Digital</h4>
+                        <p class="text-sm text-accent mb-3">Inversus Group</p>
+                        <p class="text-sm text-gray-600 mb-3 italic">Establecer las bases de la estrategia digital desde
+                            cero.</p>
+                        <ul class="list-none space-y-1 text-sm text-gray-700">
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Implementación
+                                de Google Analytics y GSC.</li>
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Análisis
+                                exhaustivo del estado de la página web.</li>
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Mejora en un
+                                300% de la visibilidad online en 3 meses al desbloquear las oportunidades de
+                                posicionamiento.</li>
+                        </ul>
+                    </div>
+                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
+                        <p class="text-xs text-gray-500 mb-1">Mayo 2025 - Julio 2025</p>
+                        <h4 class="text-lg font-semibold text-primary-dark">Prácticas Formativas Marketing Digital</h4>
+                        <p class="text-sm text-accent mb-3">Inversus Group</p>
+                        <p class="text-sm text-gray-600 mb-3 italic">Apoyé la estrategia digital de la empresa a través
+                            de una auditoría SEO y de rendimiento web.</p>
+                        <ul class="list-none space-y-1 text-sm text-gray-700">
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>
+                                Asistí en la correcta indexación de la página triplicando las
+                                páginas indexadas en Google (de 70 a más de 300) y mejoré la puntuación SEO de
+                                Lighthouse de 54 a 85 en 3 meses al solucionar los problemas de indexación de la página.
+                            </li>
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Detecté
+                                problemas de rendimiento y propuse un plan de optimización con un impacto estimado de
+                                +12% en mejora de carga de la página.</li>
+                            <li class="flex items-start"><i
+                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Gestión de bases
+                                de datos de CRM, análisis de datos y creación de contenido para redes sociales.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
             <section class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border-l-4 border-accent" id="formacion">
                 <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6">
                     <i class="fas fa-graduation-cap mr-3 text-accent"></i>Formación y Títulos
@@ -278,55 +328,7 @@
                 </div>
             </section>
 
-            <section class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border-l-4 border-accent" id="experiencia">
-                <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6">
-                    <i class="fas fa-briefcase mr-3 text-accent"></i>Experiencia Profesional
-                </h2>
 
-                <div class="space-y-6">
-                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
-                        <p class="text-xs text-gray-500 mb-1">Septiembre 2025 - Actualmente</p>
-                        <h4 class="text-lg font-semibold text-primary-dark">Especialista en Marketing Digital y
-                            Desarrollo Web</h4>
-                        <p class="text-sm text-accent mb-3">Inversus Group</p>
-                        <p class="text-sm text-gray-600 mb-3 italic">Establecer las bases de la estrategia digital desde
-                            cero.</p>
-                        <ul class="list-none space-y-1 text-sm text-gray-700">
-                            <li class="flex items-start"><i
-                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Implementación
-                                de Google Analytics y GSC.</li>
-                            <li class="flex items-start"><i
-                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Análisis
-                                exhaustivo del contenido.</li>
-                            <li class="flex items-start"><i
-                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Mejora
-                                significativa en la visibilidad online.</li>
-                        </ul>
-                    </div>
-                    <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
-                        <p class="text-xs text-gray-500 mb-1">Mayo 2025 - Julio 2025</p>
-                        <h4 class="text-lg font-semibold text-primary-dark">Prácticas Formativas Marketing Digital</h4>
-                        <p class="text-sm text-accent mb-3">Inversus Group</p>
-                        <p class="text-sm text-gray-600 mb-3 italic">Apoyé la estrategia digital de la empresa a través
-                            de una auditoría SEO y de rendimiento web.</p>
-                        <ul class="list-none space-y-1 text-sm text-gray-700">
-                            <li class="flex items-start"><i
-                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>
-                                Asistí en la correcta indexación de la página triplicando las
-                                páginas indexadas en Google (de 70 a más de 300) y mejoré la puntuación SEO de
-                                Lighthouse de 54 a 85 en 3 meses al solucionar los problemas de indexación de la página.
-                            </li>
-                            <li class="flex items-start"><i
-                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Detecté
-                                problemas de rendimiento y propuse un plan de optimización con un impacto estimado de
-                                +12% en mejora de carga de la página.</li>
-                            <li class="flex items-start"><i
-                                    class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Gestión de bases
-                                de datos de CRM, análisis de datos y creación de contenido para redes sociales.</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
 
             <section class="bg-white p-6 sm:p-8 rounded-xl shadow-lg border-l-4 border-accent mt-8" id="proyectos">
                 <h2 class="text-2xl sm:text-3xl font-semibold text-primary-dark mb-6">
