cambio en experiencia profesional

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
                 <div class="space-y-6">
                     <div class="border-l-4 pl-4 border-gray-300 hover:border-accent transition duration-300">
-                        <p class="text-xs text-gray-500 mb-1">Septiembre 2025 - Actualmente</p>
+                        <p class="text-xs text-gray-500 mb-1">Septiembre 2025 - Octubre 2025</p>
                         <h4 class="text-lg font-semibold text-primary-dark">Especialista en Marketing Digital</h4>
                         <p class="text-sm text-accent mb-3">Inversus Group</p>
                         <p class="text-sm text-gray-600 mb-3 italic">Establecer las bases de la estrategia digital desde
