--- a/index.html
+++ b/index.html
@@ -490,10 +490,10 @@
             </div>
         </section>
 
-        <--!<a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?"
+        <a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?"
             class="float-wa" target="_blank">
             <i class="fa fa-whatsapp"></i>
-        </a>-->
+        </a>
 
     </main>
 
