Añadir botón de contacto flotante con opciones para contactar por email y WhatsApp

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
             </div>
             <div class="flex items-center space-x-3">
                 <i class="fab fa-whatsapp text-accent text-xl flex-shrink-0"></i>
-                <a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?" target="_blank"
-                    class="text-gray-600 hover:text-accent transition">WhatsApp</a>
+                <a href="https://wa.me/633962600?text=Hola estamos interesados en tu perfil, ¿cuándo podemos hablar?"
+                    target="_blank" class="text-gray-600 hover:text-accent transition">WhatsApp</a>
             </div>
         </section>
 
@@ -470,6 +470,26 @@
                 </div>
             </div>
         </section>
+
+        <!-- Botón de contacto flotante -->
+        <div class="text-center mt-12 mb-8">
+            <div class="bg-white p-6 rounded-xl shadow-lg border border-gray-200">
+                <h3 class="text-xl font-semibold text-primary-dark mb-4">¿Interesado en mi perfil?</h3>
+                <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
+                    <a href="mailto:alvpastor17@gmail.com"
+                        class="bg-accent hover:bg-purple-700 text-white font-semibold py-3 px-6 rounded-lg transition duration-300 flex items-center space-x-2 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+                        <i class="fas fa-envelope"></i>
+                        <span>Contacta por Email</span>
+                    </a>
+                    <a href="https://wa.me/633962600?text=Hola%20estamos%20interesados%20en%20tu%20perfil,%20¿cuándo%20podemos%20hablar?"
+                        target="_blank"
+                        class="bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg transition duration-300 flex items-center space-x-2 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+                        <i class="fab fa-whatsapp"></i>
+                        <span>WhatsApp</span>
+                    </a>
+                </div>
+            </div>
+        </div>
 
     </main>
 
