--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                     <h4 class="text-lg font-semibold text-primary-dark">Especialista en marketing digital</h4>
                     <p class="text-sm text-accent mb-3">Inversus Group</p>
                     <p class="text-sm text-gray-600 mb-3 italic">Apoyé la estrategia digital de la empresa a través
-                        de una auditoría SEO y de rendimiento web.</p>
-                    <p class="text-sm text-gray-600 mb-3 italic">Establecer las bases de la estrategia digital desde
+                        de una auditoría SEO y de rendimiento web. <br>Establecí las bases de la estrategia digital desde
                         cero.</p>
+                    <p class="text-sm text-gray-600 mb-3 italic"></p>
                     <ul class="list-none space-y-1 text-sm text-gray-700">
                         <li class="flex items-start"><i
                                 class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Implementación
