Actualizar experiencia en marketing digital: reordenar y añadir logros en la auditoría SEO y rendimiento web.

--- a/index.html
+++ b/index.html
@@ -225,16 +225,11 @@
                     <h4 class="text-lg font-semibold text-primary-dark">Especialista en marketing digital</h4>
                     <p class="text-sm text-accent mb-3">Inversus Group</p>
                     <p class="text-sm text-gray-600 mb-3 italic">Apoyé la estrategia digital de la empresa a través
-                        de una auditoría SEO y de rendimiento web. <br>Establecí las bases de la estrategia digital desde
+                        de una auditoría SEO y de rendimiento web. <br>Establecí las bases de la estrategia digital
+                        desde
                         cero.</p>
                     <p class="text-sm text-gray-600 mb-3 italic"></p>
                     <ul class="list-none space-y-1 text-sm text-gray-700">
-                        <li class="flex items-start"><i
-                                class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Implementación
-                            de Google Analytics y GSC.</li>
-                        <li class="flex items-start"><i
-                                class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Análisis
-                            exhaustivo del estado de la página web.</li>
                         <li class="flex items-start"><i
                                 class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Mejora en un
                             300% de la visibilidad online en 3 meses al desbloquear las oportunidades de
@@ -251,6 +246,12 @@
                                 class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Detecté
                             problemas de rendimiento y propuse un plan de optimización con un impacto estimado de
                             +12% en mejora de carga de la página.</li>
+                        <li class="flex items-start"><i
+                                class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Implementación
+                            de Google Analytics y GSC.</li>
+                        <li class="flex items-start"><i
+                                class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Análisis
+                            exhaustivo del estado de la página web.</li>
                         <li class="flex items-start"><i
                                 class="fas fa-check-circle text-accent mt-1 mr-2 flex-shrink-0"></i>Gestión de bases
                             de datos de CRM, análisis de datos y creación de contenido para redes sociales.</li>
