--- a/index.html
+++ b/index.html
@@ -452,8 +452,9 @@
                     <div class="md:col-span-2">
                         <h3 class="text-xl font-semibold text-primary-dark mb-3">
                             <a href="https://web-gala-imparables.pages.dev/" target="_blank"
-                                class="hover:text-accent transition duration-150">
+                                class="hover:text-accent transition duration-150 flex items-center group">
                                 Gala imparables - Proyecto Web Personal en Desarrollo
+                                <i class="fas fa-external-link-alt text-sm ml-2 opacity-60 group-hover:opacity-100"></i>
                             </a>
                         </h3>
                         <p class="text-gray-600 mb-4 leading-relaxed">
