añadido VirtualBox en competencias técnicas

--- a/index.html
+++ b/index.html
@@ -372,6 +372,8 @@
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Git, GitHub,
                         Trello</span>
                     <span
+                        class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">VirtualBox</span>
+                    <span
                         class="bg-accent text-white text-xs font-medium px-3 py-1 rounded-full hover:bg-opacity-80 transition">Marketing
                         Digital (SEO)</span>
                     <span
